# my_robot_arm

./: .gitignore  AGENTS.md  README.md
jz_descripetion-main/robot_urdf/meshes/collision/: body1_link.STL  left_arm_link10.STL  left_arm_link8.STL  right_arm_link1.STL  right_arm_link10.STL  right_arm_link2.STL  right_arm_link3.STL  right_arm_link6.STL  right_arm_link7.STL  right_arm_link8.STL
jz_descripetion-main/robot_urdf/meshes/visual/: base_link.STL  body2_link.STL  body3_link.STL  hand1_link.STL  hand2_link.STL  left_arm_link1.STL  left_arm_link2.STL  left_arm_link3.STL  left_arm_link4.STL  left_arm_link5.STL  left_arm_link6.STL  left_arm_link7.STL  left_arm_link9.STL  right_arm_link4.STL  right_arm_link5.STL  right_arm_link9.STL
jz_descripetion-main/robot_urdf/urdf/: robot urdf.10.8.SLDASM.csv  robot urdf.10.8.SLDASM.urdf
light_teleop/: pyproject.toml  使用记录.md
light_teleop/config/: vr_visual_demo.yml
light_teleop/docs/: architecture.md  plan.md  执行.md  迁移说明.md  阶段进展报告.md
light_teleop/light_teleop/: __init__.py  model_loader.py  pink_solver.py  visualizer.py  vr_visual_demo.py
light_teleop/light_teleop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
light_teleop/scripts/: README.md  check_vr_udp.sh  run_vr_demo.sh
reference/pink-main/: .gitattributes
reference/pink-main/examples/: arm_panda_manipulability_comparison.py  humanoid_g1_com.py  inverse_kinematics_ur10.py  planar_2dof_manipulability.py
reference/pink-main/pink/tasks/: manipulability_task.py
reference/pink-main/tests/: test_manipulability_task.py
teleop_vr_recv-main/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  package.xml
teleop_vr_recv-main/config/: teleop_vr_recv.toml
teleop_vr_recv-main/docs/: BOUNDARY_LIMIT_ANALYSIS.md  SMOOTHING_FILTER_IMPLEMENTATION.md  VR_CONFIG_USAGE.md  VR_COORDINATE_TRANSFORMER.md
teleop_vr_recv-main/include/teleop_vr_recv/: config.h  data_smoother.h  teleop_node.h  teleop_vr_config.h  udp_receiver.h  vr_button_handler.h  vr_coordinate_transformer.h  vr_data_parser.h  vr_smoothing_pipeline.h  workspace_limiter.h
teleop_vr_recv-main/launch/: teleop_vr_recv.launch.py
teleop_vr_recv-main/src/: teleop_node.cpp  teleop_node_main.cpp  udp_receiver.cpp  vr_button_handler.cpp  vr_coordinate_transformer.cpp  vr_data_parser.cpp  vr_smoothing_pipeline.cpp  workspace_limiter.cpp
teleop_vr_recv-main/test/: recv_vr_udp.py  test_publish_config.cpp  test_publish_mode_source.cpp  test_vr_button_handler_primary.cpp
teleop_vr_recv-main/utils/: process_lock.h
teleop_vr_recv-main/utils/log/: log_config.cpp  log_config.h
teleop_vr_recv-main/utils/universal_config/: toml_config.h  universal_toml_config.h
test/: README_teleop_vr_py.md  recv_vr_udp.py  test_teleop_vr_py.py  vr_recv_demo.py  按键说明.md
test/teleop_vr_py/: __init__.py  button_handler.py  coordinate_transformer.py  data_smoother.py  math_utils.py  smoothing_pipeline.py  types.py  udp_receiver.py  vr_data_parser.py  workspace_limiter.py
urdf_test/docs/: 01_urdf_basic_no_big_error.md  02_motion_control_no_big_error.md  03_physical_properties_for_simulation.md
